Add customer XLS export
